Change log for zeit.web
=======================

2.91 (unreleased)
-----------------

- ZON-3147: Remove buzzboard image duplicates


2.90.1 (2016-06-29)
-------------------

- FIX: Adjust breakpoint for ZMO sharing links visibility [RELOADED]


2.90 (2016-06-29)
-----------------

- BUG-444: Do not show commentcount on articles and teasers with a
  disabled comment thread

- FIX: Adjust breakpoint for ZMO sharing links visibility

- FIX: Pass proper 'published' date to rawr

- FIX: Make image groups work in longform header again


2.89.1 (2016-06-27)
-------------------

- HOTFIX: Pass through ratio of article images properly


2.89 (2016-06-27)
-----------------

- HOTFIX: Remove duplicate article image from column header

- ZON-2724: Define custom parameters for different page types (Webtrekk)

- ZON-3100: Don't materialize image variants during article rendering

- BUG-436: Fix link element url in feed

- FIX: Fix footer styles

- FIX: Fix CSS charset

- MAINT: Adapt printbox styles

- MAINT: Clean up ZMO test data


2.88.2 (2016-06-23)
-------------------

- HOTFIX: Remove duplicate article image from liveblog header

- ZON-3111: Add link to digital subscription into user nav

- MAINT: Drop orphaned image retrieval functions

- MAINT: Use current variant ids in several places


2.88.1 (2016-06-22)
-------------------

- HOTFIX: Display article image again for `text-only` ZMO header
  (which should probably be called `image-at-bottom` instead)


2.88 (2016-06-21)
-----------------

- ZON-3108: Return correct ressort for CeleraOne

- ZON-2927: Split Image.layout into display_mode and variant_name

- ZON-2256: Track comment actions

- ZON-2751: Style column teaser in buzzboard

- ZON-2345: Do not show expired videos

- ZON-3088: Restructure article header module handling

- BUG-432: Set webtrekk pagenumber for paginated centerpages

- OPS-267: Move normalize.css inline into CSS

- OPS-285: Refactor overlays

- MAINT: Replace compass with libsass and autoprefixer
