@@ -1,4 +1,5 @@
 {%- extends "zeit.web.core:templates/inc/asset/image_teaser.tpl" -%}
 
 {% set fallback_image = True %}
+{% set fallback_expired = True %}
 {% set image_itemprop = 'image' %}
